--- a/crawler_corruption.properties
+++ b/crawler_corruption.properties
@@ -21,7 +21,7 @@ action.0.type=email
 action.0.from=alice.monalisa@cern.ch
 action.0.to=$QSELECT distinct s_email FROM subscribers WHERE (s_agid=0 OR (s_agid=10 AND (s_site IS NULL OR length(s_site)=0 OR '#0' ilike 'alice::'||s_site||'::%'))) AND s_valid=1;
 action.0.subject=SE #0 might have data corruption issues
-action.0.body=<HTML>Storage #0 contains too many corrupted files;
+action.0.body=Storage element #0 contains #VALUE% of corrupted file from the sample size analysed;
 
 action.1.report_err=error
 action.1.report_ok=ok
